--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,9 @@ MBDyn 1.X-Devel
 		- fix initialization (Reinhard Resch)
 		- fix one-time leak in axial wrapper
 		- fix inconsistency in step drive callers docs
+		- fix escaping in hints
+		- fix "reference" to drive callers in drive caller hints
+		- fix inconsistency in rod constitutive law docs
 
 MBDyn 1.7.3
 	Enhancements:
