Fixed error in output of distance joint

--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -4230,7 +4230,8 @@ For example, to smoothly change the distance from the initial value to a desired
 \subsubsection{Output}
 The extra output is:
 \begin{itemize}
-    \item the three components of the imposed distance in the global frame
+    \item the three components of unit vector representing the imposed 
+      distance direction in the global frame
     \item the norm of the imposed distance
 \end{itemize}
 
