--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@ MBDyn 1.X-Devel
 		- fix escaping in hints
 		- fix "reference" to drive callers in drive caller hints
 		- fix inconsistency in rod constitutive law docs
+		- fix total pin joint initial assembly (Eduardo Okabe)
 
 MBDyn 1.7.3
 	Enhancements:
