--- a/manual/input/elemaero.tex
+++ b/manual/input/elemaero.tex
@@ -150,9 +150,9 @@ aerodynamic center, velocity measurement point (the point where the
 kinematic boundary conditions are evaluated) and twist, in radians, as functions
 of the dimensionless abscissa along the span.
 
-The optional \kw{tip loss} keyword allows to define an additional shape,
+The optional \kw{tip loss} keyword allows the user to define an additional shape,
 \nt{tip\_loss},
-whose value is used to scale the value of the normal aerodynamic force.
+whose value is used to scale the value of the normal component of the aerodynamic force.
 By default, the scale factor is 1.
 The \nt{tip\_loss} shape should have a value comprised between 0 and 1.
 
