contents in pdf

--- a/manual/tecman/tecman.tex
+++ b/manual/tecman/tecman.tex
@@ -34,7 +34,7 @@
 \usepackage{graphicx}
 \usepackage{psfrag}
 \usepackage{bm, amsmath, amsfonts, amssymb}
-%\usepackage[dvips,breaklinks=true,colorlinks=false]{hyperref}
+\usepackage[dvips,breaklinks=true,colorlinks=false]{hyperref}
 \usepackage{html}
 \usepackage{comment}
 \usepackage{color}
