document missing feature

--- a/manual/input/general.tex
+++ b/manual/input/general.tex
@@ -3818,6 +3818,10 @@ the force is computed for each direction as a function of the respective
 strain component using the same function.
 When used for 1D elements, the word \kw{isotropic} can be omitted.
 
+\bigskip
+\noindent
+\emph{Note: the \kw{Scalar function elastic} and the \kw{scalar function elastic isotropic} constitutive laws do not support \kw{prestress} nor \kw{prestrain}}.
+
 \subsection{Scalar function elastic orthotropic}
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
@@ -3855,6 +3859,10 @@ constitutive law is actually instantiated.
 \end{verbatim}
 indicates that the constitutive law is only defined in direction 3 
 as a multilinear function.
+
+\bigskip
+\noindent
+\emph{Note: the \kw{Scalar function elastic orthotropic} constitutive law does not support \kw{prestress} nor \kw{prestrain}}.
 
 \subsection{Linear viscous, linear viscous isotropic}
 %\begin{verbatim}
