more linear solver details

--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -1113,6 +1113,9 @@ summarizes how each linear solver deals with pivoting policies.
 	SuperLU		& $\surd$ & $\surd$ & $\surd$ & $\surd$   &         & $\surd$ &	        \\
 	TAUCS		& ?       & ?       & ?       & ?         & ?       & ?       & $\surd$ \\
 	Watson		& $\surd$ & $\surd$ & $\surd$ & $\surd$   &         & $\surd$ &	        \\
+	Pastix		& $\surd$ & $\surd$ & $\surd$ & $\surd$   &         &         &	        \\
+	QR		&         &         &         &           &         &         &	        \\
+	SpQR		& $\surd$ &         &         &           &         &         &	        \\
 \hline
 \end{tabular}
 \end{table}
@@ -1142,6 +1145,9 @@ summarizes how each linear solver deals with pivoting policies.
 	SuperLU		& 			& dynamic 	&		\\
 	TAUCS		&			& ?		&		\\
 	Watson		&			& dynamic	&		\\
+	Pastix		&			& dynamic	&		\\
+	QR		&			& ?		&		\\
+	SpQR		&			& dynamic	&		\\
 \hline
 \end{tabular}
 \end{table}
